// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`index > case 0 1`] = `
"
      .btn {
      }
      .btn-primary {
      }
      .btn-xs {
      }
      .uppercase {
      }
    "
`;

exports[`index > case 1 1`] = `
"
      .btn {
      }
      .btn-primary {
      }
      .btn-xs {
      }
      .uppercase {
      }
    "
`;

exports[`index > case 2 1`] = `
"
      .btn {
      }
      .btn-primary {
      }
      .btn-xs {
      }
      .uppercase {
      }
    "
`;

exports[`index > case 3 1`] = `
"
      .btn {
      }
      .btn-primary {
      }
      .btn-xs {
      }
      .btn.btn-secondary {
      }
      .uppercase {
      }
    "
`;

exports[`index > case 4 1`] = `
"
      .btn {
      }
      .btn-primary {
      }
      .btn-xs {
      }
      .btn.btn-secondary {
      }
      .uppercase {
      }
    "
`;
